# beerbets

./: README.md
backend/: db.sqlite3  pyproject.toml
backend/api/: urls.py
backend/backend/: settings.py  urls.py  views.py
backend/bets/: admin.py  models.py
backend/bets/api/: serializers.py  urls.py  views.py
backend/bets/migrations/: 0001_initial.py  0002_alter_bet_end_alter_bet_winner.py  0003_bet_prompt.py  0004_bet_title.py  0005_alter_bet_bettor_1_alter_bet_bettor_2_and_more.py  0006_alter_bet_bettor_1_alter_bet_bettor_2_and_more.py
backend/users/: admin.py  forms.py  models.py  urls.py  views.py
backend/users/api/: serializers.py  urls.py  views.py
backend/users/migrations/: 0001_initial.py  0002_alter_user_username.py  0003_alter_user_username.py  0004_alter_user_id.py
backend/users/templates/: user_registration.html
